Fixed valign

--- a/css/style.css
+++ b/css/style.css
@@ -36,3 +36,15 @@ i{
     position: absolute;
     right: 20px;
 }
+
+.falsecaret {
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: 2px;
+  vertical-align: middle;
+  border-top: 4px dashed transparent;
+  border-top: 4px solid transparent;
+  border-right: 4px solid transparent;
+  border-left: 4px solid transparent;
+}
